# ahma

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  README.md  SIMPLIFY.md  SPEC.md  STREAMLINING.md  compliance-report.md  deny.toml  requirements.md
.ahma/: README.md  android-logcat.json  android_logcat.json  kotlin.json  rust-log-monitor.json  rust.json  simplify.json
.cargo/: config.toml
.config/: nextest.toml
.cursor/: mcp.json
ahma_common/: Cargo.toml
ahma_common/src/: lib.rs  observability.rs  sandbox_state.rs  timeouts.rs
ahma_coverage/: Cargo.toml
ahma_coverage/src/: main.rs
ahma_http_bridge/: Cargo.toml  README.md  test_url.rs
ahma_http_bridge/src/: bridge.rs  lib.rs  main.rs  request_handler.rs  session.rs
ahma_http_bridge/src/quic/: cert.rs  mod.rs
ahma_http_bridge/tests/: bridge_stress_tests.rs  cargo_tool_integration_test.rs  fast_error_response_test.rs  file_tool_tests.rs  git_tool_tests.rs  handshake_concurrency_test.rs  handshake_timeout_test.rs  http3_integration_test.rs  http_bridge_integration_test.rs  http_initialize_validation_integration_test.rs  http_roots_handshake_integration_test.rs  progress_token_http_integration_test.rs  python_tool_tests.rs  request_handler_coverage_test.rs  sandbox_roots_handshake_test.rs  sandbox_security_test.rs  session_coverage_test.rs  session_delete_test.rs  session_sandbox_test.rs  session_stress_test.rs  shell_tool_tests.rs  sse_endpoint_test.rs  sse_file_tools_tests.rs  sse_streaming_test.rs  sse_stress_tests.rs  tool_integration_test.rs
ahma_http_bridge/tests/common/: client.rs  mod.rs  sandbox_env.rs  server.rs  sse_test_helpers.rs  uri.rs
ahma_http_mcp_client/: Cargo.toml  README.md
ahma_llm_monitor/: Cargo.toml
ahma_llm_monitor/src/: client.rs  error.rs  lib.rs  prompt.rs
ahma_llm_monitor/tests/: client_test.rs
ahma_mcp/: .cursorrules  Cargo.toml  README.md
ahma_mcp/--help/: mtdf-schema.json
ahma_mcp/.github/prompts/: coverage.prompt.md
ahma_mcp/examples/: README.md  kotlin_tool.rs
ahma_mcp/src/: callback_system.rs  client.rs  config.rs  constants.rs  lib.rs  log_monitor.rs  mcp_callback.rs  operation_monitor.rs  path_security.rs  schema_validation.rs  service_builder.rs  shell_pool.rs  tool_hints.rs  transport_patch.rs  validation.rs
ahma_mcp/src/adapter/: mod.rs
ahma_mcp/src/adapter/preparer/: conversions.rs  shell_redirect.rs  tests.rs
ahma_mcp/src/livelog/: mod.rs
ahma_mcp/src/mcp_service/: bundle_registry.rs  config_watcher.rs  mod.rs  schema.rs  sequence.rs  subcommand.rs
ahma_mcp/src/mcp_service/handlers/: await_tool.rs  common.rs  common_tests.rs  discover_tools.rs  livelog_tool.rs  mod.rs  shell_tool.rs  status_tool.rs
ahma_mcp/src/sandbox/: command.rs  core.rs  error.rs  landlock.rs  mod.rs  prerequisites.rs  scopes.rs  seatbelt.rs  test_raw_attr.rs  types.rs  windows.rs
ahma_mcp/src/shell/: cli.rs  list_tools.rs  resolution.rs
ahma_mcp/src/shell/modes/: cli.rs  http_bridge.rs  list_tools.rs  mod.rs  server.rs  unix_bridge.rs
ahma_mcp/src/simplify/: bin.rs  mod.rs  models.rs  report.rs  subcommand.rs
ahma_mcp/src/simplify/analysis/: conversion.rs  detekt.rs  exclusion.rs  external.rs  mod.rs  pipeline.rs
ahma_mcp/src/test_utils/: cli.rs  client.rs  fs.rs  http.rs  in_process.rs  mcp_client_trait.rs  mod.rs  path_helpers.rs
ahma_mcp/src/tool_availability/: builder.rs  types.rs
ahma_mcp/src/utils/: logging.rs  mod.rs  stdio.rs
ahma_mcp/tests/: adapter_extended_coverage_test.rs  adapter_retry_integration_test.rs  adapter_sandbox_scope_regression_test.rs  automatic_async_integration_test.rs  builtin_tools_test.rs  cli_binary_integration_test.rs  cli_coverage_test.rs  cli_extended_integration_test.rs  cli_mode_coverage_test.rs  cli_pure_functions_test.rs  client_coverage_expansion_test.rs  config_coverage_test.rs  config_reload_test.rs  config_watcher_unit_test.rs  development_workflow_invariants_test.rs  file_tools_integration_test.rs  file_tools_schema_validation_test.rs  flattened_tool_test.rs  freeform_args_test.rs  full_system_integration_bug_test.rs  generate_schema_test.rs  guard_rail_test.rs  linux_legacy_kernel_sandbox_test.rs  linux_sandbox_integration_test.rs  livelog_config_test.rs  livelog_integration_test.rs  livelog_pipeline_test.rs  log_monitor_integration_test.rs  logging_coverage_test.rs  main_test.rs  mcp_callback_coverage_test.rs  mcp_cancellation_bug_test.rs  mcp_integration_tests.rs  mcp_service_coverage_improvement_test.rs  mcp_service_edge_cases_test.rs  mcp_service_integration_coverage_test.rs  mcp_service_integration_test.rs  mcp_service_mod_unit_test.rs  multiline_argument_handling_test.rs  nested_sandbox_exit_test.rs  (+28 more)
ahma_mcp/tests/adapter/: coverage_expansion.rs
ahma_mcp/tests/config/: basic.rs  loading.rs
ahma_mcp/tests/mcp_service/: async_edge_cases.rs  await_tool.rs  basic.rs  basic_coverage.rs  call_tool_handlers.rs  comprehensive.rs  comprehensive_args.rs  comprehensive_concurrency.rs  comprehensive_resilience.rs  comprehensive_schema.rs  comprehensive_security.rs  comprehensive_unknown_tool.rs  coverage.rs  coverage_expansion.rs  integration.rs  mod.rs  progressive_disclosure.rs  shell_tool.rs
ahma_mcp/tests/operation_monitor/: cancellation.rs  comprehensive.rs  tool_hints.rs
ahma_mcp/tests/schema_validation/: comprehensive.rs  comprehensive_config.rs  comprehensive_errors.rs  comprehensive_fields.rs  comprehensive_performance.rs  comprehensive_validator.rs  items.rs  mod.rs  tool.rs
ahma_mcp/tests/tool_suite/: android_gradlew_test.rs  android_logcat_test.rs  gradlew_async_test.rs  gradlew_interactive_test.rs
ahma_simplify/: Cargo.toml  README.md  SPEC.md
ahma_simplify/src/: main.rs  models.rs  report.rs
ahma_simplify/src/analysis/: detekt.rs  external.rs  paths.rs  pipeline.rs
ahma_simplify/tests/: report_integration_test.rs
ahma_validate/: Cargo.toml  README.md
ahma_validate/src/: main.rs
docs/: agent-skills.md  connection-modes.md  custom-tools.md  installation.md  (+3 more)
generate_tool_schema/: AGENTS.md  Cargo.toml  README.md
generate_tool_schema/src/: main.rs
(+30 files in other folders)
