[workspace]
default-members = [
    "ahma_mcp",
    "generate_tool_schema",
    "ahma_http_bridge",
    "ahma_http_mcp_client",
    "ahma_common",
    "ahma_llm_monitor",
]

members = [
    "ahma_mcp",
    "generate_tool_schema",
    "ahma_http_bridge",
    "ahma_http_mcp_client",
    "ahma_common",
    "ahma_simplify",
    "ahma_coverage",
    "ahma_llm_monitor",
]

resolver = "3"

[workspace.package]
authors = ["Paul Houghton <paulirotta@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.93.1"
version = "0.5.5"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
ctrlc = "3.5"
directories = "6.0"
dirs = "6.0"
dunce = "1.0"
futures = "0.3"
landlock = "0.4"
opentelemetry = { version = "0.31", features = ["trace"] }
# Windows-only kernel binding crate (only fetched when compiling for Windows)
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Isolation",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
opentelemetry-otlp = { version = "0.31", features = [
    "http-proto",
    "reqwest-rustls",
] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
regex = "1.12"
reqwest = { version = "0.13", default-features = false }
rmcp = { version = "1.4", features = [
    "server",
    "client",
    "macros",
    "transport-io",
    "transport-child-process",
    "elicitation",
    "schemars",
    "transport-streamable-http-client-unix-socket",
] }
schemars = "1.2"
serde = "1.0"
serde_json = "1.0"
tempfile = "3.27"
thiserror = "2.0"
tokio = { version = "1.51", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "fs",
    "signal",
] }
tokio-util = "0.7"
toml = "1.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[profile.release]
lto = "thin"
