[package]
name = "ahma_common"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
