[package]
name = "ahma_coverage"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
