[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "ahma_http_bridge"
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ahma_common = { path = "../ahma_common" }
anyhow.workspace = true
axum = { version = "0.8", features = ["http2", "tokio"] }
bytes = "1.11"
hyper = { version = "1", features = ["http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = { version = "0.5" }
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
dashmap = "6.1"
futures.workspace = true
opentelemetry-otlp = { workspace = true }
opentelemetry.workspace = true
opentelemetry_sdk = { workspace = true }
owo-colors = "4.3"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "process",
    "sync",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { workspace = true, features = ["io", "codec"] }
tower-http = { version = "0.6", features = ["trace", "cors", "set-header"] }

# QUIC / HTTP/3 support
base64 = "0.22"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http-body-util = "0.1"
quinn = "0.11"
rcgen = "0.13"
rustls = "0.23"
rustls-pki-types = "1"
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
uuid = { version = "1.23", features = ["v4", "serde"] }

[dev-dependencies]
ahma_mcp = { path = "../ahma_mcp" }
async-trait.workspace = true
dunce.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["json", "stream", "http2", "http3"] }
serial_test = "3.4"
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }
urlencoding = "2.1"
