[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "ahma_llm_monitor"
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json", "rustls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
