[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "ahma_mcp"
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "ahma_mcp"
path = "src/lib.rs"

[[bin]]
name = "ahma-mcp"
path = "src/shell/bin.rs"

[[bin]]
name = "ahma-simplify"
path = "src/simplify/bin.rs"
required-features = ["simplify"]

[dependencies]
ahma_common = { path = "../ahma_common" }
ahma_http_bridge = { path = "../ahma_http_bridge" }
ahma_http_mcp_client = { path = "../ahma_http_mcp_client" }
ahma_llm_monitor = { path = "../ahma_llm_monitor" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
ctrlc.workspace = true
directories.workspace = true
dirs.workspace = true
dunce.workspace = true
futures.workspace = true
notify = "8.2"
opentelemetry-otlp = { workspace = true }
opentelemetry.workspace = true
opentelemetry_sdk = { workspace = true }
opener = { version = "0.8", optional = true }
pulldown-cmark = { version = "0.13", optional = true }
quick-xml = { version = "0.37", optional = true }
rand = "0.10.1"
regex.workspace = true
reqwest = { workspace = true, features = ["json", "rustls", "http2", "http3"] }
rmcp.workspace = true
rust-code-analysis = { git = "https://github.com/paulirotta/rust-code-analysis.git", branch = "minimal-submodules", optional = true }
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio = "1.52"
toml.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry = { workspace = true }
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
walkdir = { version = "2.5", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
futures.workspace = true
tempfile.workspace = true
wiremock = "0.6"

[features]
android = []
simplify = [
	"dep:opener",
	"dep:pulldown-cmark",
	"dep:quick-xml",
	"dep:rust-code-analysis",
	"dep:walkdir",
]
default = ["android", "simplify"]

# Tool configuration examples
[[example]]
name = "rust_tool"
path = "examples/rust_tool.rs"

[[example]]
name = "file-tools"
path = "examples/file-tools.rs"

[[example]]
name = "gh_tool"
path = "examples/gh_tool.rs"

[[example]]
name = "git_tool"
path = "examples/git_tool.rs"

[[example]]
name = "kotlin_tool"
path = "examples/kotlin_tool.rs"

[[example]]
name = "python_tool"
path = "examples/python_tool.rs"
