[package]
name = "ahma_simplify"
description = "Code simplicity metrics aggregator using the rust-code-analysis library"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "ahma_simplify"
path = "src/lib.rs"

[[bin]]
name = "ahma-simplify"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dunce = { workspace = true }
rust-code-analysis = { git = "https://github.com/paulirotta/rust-code-analysis.git", branch = "minimal-submodules" }
serde = { version = "1.0", features = ["derive"] }
tempfile = { workspace = true }
toml = { workspace = true }
quick-xml = "0.37"
walkdir = "2.5"
pulldown-cmark = "0.13"
opener = "0.8"

[dev-dependencies]
