[package]
edition.workspace = true
license.workspace = true
name = "ahma-validate"
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "ahma-validate"
path = "src/main.rs"

[dependencies]
ahma-mcp = { path = "../ahma_mcp" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
