[package]
edition.workspace = true
license.workspace = true
name = "generate-tool-schema"
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "generate-tool-schema"
path = "src/main.rs"

[dependencies]
ahma-mcp = { path = "../ahma_mcp" }
schemars = "1.2"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
